# smrti

./: .dockerignore  .env.docker  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.md.backup  SERVICE_INTEGRATION.md  STATUS_REPORT.md  __init__.py  config.json  docker-compose.dev.yml  docker-compose.yml  example_metrics_system.py  llms.txt  mkdocs.yml  organize-docs.sh  organize-smrti-docs.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  short_metrics_demo.py  test_consolidation.py  test_consolidation_direct.py  test_consolidation_standalone.py  test_dashboard.py  test_init_simple.py  test_integration_comprehensive.py  test_memory_adapter.py  test_memory_simple.py  test_redis_adapter.py  test_redis_simple.py  test_vector_adapter.py  (+1 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: README.md
docker/grafana/provisioning/datasources/: datasources.yml
docker/postgres/init/: 01-init-episodic.sql
docker/prometheus/: prometheus.yml
docs/: CURRENT_STATE_ANALYSIS.md  DEVELOPMENT_GUIDE.md  DOCKER_SETUP.md  DOCKER_STATUS.md  IMPLEMENTATION_SUMMARY.md  PRD_COMPLIANCE_REVIEW.md  README.md  SESSION_SUMMARY_2025-10-05.md  STATUS_AND_NEXT_STEPS.md  USER_GUIDE.md  USER_GUIDE_UPDATE.md  decisions.md  index.md  metrics-system-summary.md  smrti-prd.md
docs/archive/: README.md  api-reference-v1-20251012.md  extraction_pipeline.md  schema.md  storage_provider.md
docs/design/: README.md  phase-4-completion.md
docs/design/adr/: README.md
docs/design/prompts/: master_prompt.md
docs/developer/: README.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: configuration.md  error-handling.md  search.md  telemetry.md
docs/improvements/: plan.md  session-state-spec.md  spec.md
docs/integration/: README.md
docs/misc/: README.md  reorganization-summary.md  status-report-oct-12-2025.md
docs/operator/: README.md
docs/prompts/: smrti_architecture.md
docs/reference/: README.md  api-reference.md
docs/user/: README.md  quickstart.md
examples/: advanced_query_interface_demo.py  basic_usage.py
konf-tool-memory-smrti/: Cargo.toml
konf-tool-memory-smrti/src/: lib.rs
metrics/: dashboard_export.json  metrics_data.csv  metrics_data.json  prometheus_metrics.txt
showcase/: LEARNING.md  smrti_comprehensive_test.ipynb  test_services.py
smrti/: __init__.py  api.py
smrti-core/: Cargo.toml
smrti-core/src/: config.rs  error.rs  events.rs  lib.rs  memory.rs  models.rs  telemetry.rs
smrti-core/src/provider/: mod.rs  postgres.rs
smrti-core/src/sql/migrations/: v001_initial.sql  v002_session_state.sql
smrti-core/tests/: postgres_provider.rs
smrti-python/: Cargo.toml  pyproject.toml
smrti-python/src/: lib.rs
smrti-python/tests/: test_smoke.py
smrti/adapters/: __init__.py
smrti/adapters/database/: __init__.py  postgresql.py
smrti/adapters/embedding/: __init__.py  openai.py  sentence_transformers.py
smrti/adapters/graph/: __init__.py  neo4j.py
smrti/adapters/search/: __init__.py  elasticsearch.py
smrti/adapters/storage/: __init__.py  memory_adapter.py  redis.py  redis_adapter.py  vector_adapter.py
smrti/adapters/vector/: __init__.py  chromadb.py
smrti/api/: __init__.py
smrti/cli/: __init__.py
smrti/config/: __init__.py  environment.py  loader.py  settings.py
smrti/consolidation/: __init__.py  engine.py  simple_engine.py
smrti/core/: __init__.py  base.py  consolidation.py  context_assembly.py  exceptions.py  protocols.py  registry.py  retrieval_engine.py
smrti/engines/: __init__.py
smrti/engines/context/: __init__.py  assembly.py
smrti/engines/retrieval/: __init__.py  hybrid.py
smrti/memory/: __init__.py
smrti/memory/tiers/: __init__.py  episodic.py  long_term.py  semantic.py  short_term.py  working.py
smrti/metrics/: __init__.py  aggregators.py  collectors.py  dashboard.py  exporters.py
smrti/query/: __init__.py  engine.py  filters.py  parser.py  ranking.py  semantic.py  temporal.py
smrti/schemas/: __init__.py  models.py
smrti/telemetry/: __init__.py
smrti/testing/: __init__.py
smrti/tiers/: __init__.py  episodic.py  longterm.py  shortterm.py  working.py
src/smrti/: __init__.py  cli.py
src/smrti/api/: __init__.py  auth.py  dependencies.py  main.py  models.py  storage_manager.py
src/smrti/api/routes/: __init__.py  health.py  memory.py
src/smrti/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py  types.py
src/smrti/embedding/: __init__.py  local.py  protocol.py
src/smrti/storage/: __init__.py  init_db.sql  protocol.py
src/smrti/storage/adapters/: __init__.py  postgres_episodic.py  postgres_semantic.py  qdrant_long_term.py  redis_short_term.py  redis_working.py
tests/: __init__.py  conftest.py  test_context_assembly.py  test_episodic_memory.py  test_hybrid_retrieval.py  test_longterm_memory.py  test_shortterm_memory.py
tests/integration/: __init__.py  test_advanced_query_integration.py  test_api_integration.py  test_cross_tier_operations.py  test_end_to_end_scenarios.py
tests/mocks/: __init__.py  adapters.py
tests/unit/: __init__.py.bak  test_config.py  test_embedding_local.py  test_engines.py  test_exceptions.py  test_models.py  test_qdrant_long_term.py  test_redis_short_term.py  test_redis_working.py  test_registry.py
