[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "smrti"
version = "0.1.0"
description = "Graph-based memory for AI agents, built on PostgreSQL + pgvector"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sourav Sharan" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/konf-dev/smrti"
Documentation = "https://konf-dev.github.io/smrti/"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
